--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 * {
-    margin: 0;
+    margin: 0px;
     padding: 0;
 }
 body {
     height: 100vh;
-    background: rgba(54, 223, 3, 0.568); /* For browsers that do not support gradients */
-    background: linear-gradient(to right, rgba(52, 255, 1, 0.685) , rgb(13, 104, 25)); /* Standard syntax (must be last) */
+    margin: 20px;
+    background: #494949bf; /* For browsers that do not support gradients */
+    background: linear-gradient(to right, grey, darkslategrey ); Standard syntax (must be last)
 }
 h1 {
     font-family: 'Bowlby One SC', cursive;
@@ -14,28 +15,152 @@ h1 {
     margin: 0;
     /* margin-top: 50px; */
 }
-
+img {
+    border-radius: 7px;
+}
+div {
+    color: darkgray;
+}
+h2 {
+    margin-top: 20px;
+    font-family: 'Bowlby One SC', cursive;
+}
 .o {
     color: #F0A700;
 }
-#box {
+/* #box {
     padding: 30px;
-}
+} */
 
 #bartender {
-    background-color: aliceblue;
+    /* margin-left: 20px;
+    margin-right: 20px; */
+     
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    font-size: 1.3em;
+    /* border: 2.5px solid rgb(15, 2, 2); */
+    background-color: rgba(0, 0, 0, 0.598);
+    border-radius: 15px;
     
 }
 
-#beertype {
-    background-color: aqua;
+.bName, .status, .statusdetail{
+    display: flex;
+    justify-content: center;
+
+}
+
+.status {
+    font-weight: 999;
+}
+
+.orde {
+    padding-bottom: 5px;
+}
+#serv {
+    /* border: 2.5px solid rgb(15, 2, 2); */
     padding: 10px;
+    background-color: rgba(0, 0, 0, 0.598);
+    border-radius: 15px;
+
 }
 
 #que {
-    background-color: chocolate;
+    background-color: rgba(0, 0, 0, 0.598);
+    border-radius: 15px;
+   padding: 10px;
+   /* border: 2.5px solid rgb(15, 2, 2); */
 }
 
+
+/*      STORAGE         */
+
 #storage {
-    background-color: tomato;
+    padding: 50px;
+   /* border: 2.5px solid rgb(15, 2, 2); */
+   display: grid;
+    grid-template-columns: auto auto;
+    background-color: rgba(0, 0, 0, 0.598);
+    
+    border-radius: 15px;
 }
+.amount {
+    background-image: url("img/white-barrel.svg.hi.png");
+   
+    width: 50%;
+    height: 100px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    /* padding: 30px; */
+    padding-left: 50px; 
+    padding-top: 50px;
+    font-size: 3em;
+    /* display: flex;
+    justify-content: center; */
+    
+}
+
+.sName {
+    font-size: 1.5em;
+    padding: 40px;
+    padding-top: 80px;
+}
+/*          BEER TYPE       */
+#beertype {
+    display: grid;
+    grid-template-columns: auto auto;
+}
+.bename {
+    font-weight: 999;
+    display: flex;
+    justify-content: center;
+    font-size: 1.5em;
+    
+}
+#beert {
+    background-color: rgba(0, 0, 0, 0.598);
+    border-radius: 15px;
+    padding: 10px;
+    margin: 5px;
+    /* font-weight: 999; */
+    /* border: 2.5px solid rgb(15, 2, 2); */
+    
+}
+.beerimg {
+    /* display: grid;
+    grid-template-columns: auto auto; */
+    /* height: 100px; */
+}
+.beerimg img {
+    height: 150px;
+    width: 100%;
+    border-radius: 5px;
+
+}
+
+
+
+/*          TAPS            */
+
+#taptap {
+    background-color: rgba(0, 0, 0, 0.598);
+    border-radius: 15px;
+    margin: 5px;
+    padding: 10px;
+}
+
+#tap {
+    display: grid;
+    grid-template-columns: auto  auto;
+}
+.tapimg img{
+    height: 150px;
+    width: 100%;
+}
+.beers {
+    display: flex;
+    justify-content: center;
+    font-size: 1.5em;
+}
+/*      pie chart       */
