--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 }
 body {
     height: 100vh;
+    
     margin: 20px;
     background: #494949bf; /* For browsers that do not support gradients */
     background: linear-gradient(to right, grey, darkslategrey ); Standard syntax (must be last)
@@ -18,8 +19,11 @@ h1 {
 img {
     border-radius: 7px;
 }
+#box{
+    width: 100%;
+}
 div {
-    color: darkgray;
+    color: rgb(255, 255, 255);
 }
 h2 {
     margin-top: 20px;
@@ -28,9 +32,10 @@ h2 {
 .o {
     color: #F0A700;
 }
-/* #box {
-    padding: 30px;
-} */
+ /* #box {
+    max-width: 680px;
+    position: relative;
+}  */
 
 #bartender {
     /* margin-left: 20px;
@@ -118,6 +123,9 @@ h2 {
     font-size: 1.5em;
     
 }
+.cate, .pouring, .alco{
+    display: flex;
+}
 #beert {
     background-color: rgba(0, 0, 0, 0.598);
     border-radius: 15px;
@@ -148,11 +156,13 @@ h2 {
     border-radius: 15px;
     margin: 5px;
     padding: 10px;
+    max-width: 680px;
 }
 
 #tap {
     display: grid;
     grid-template-columns: auto  auto;
+    
 }
 .tapimg img{
     height: 150px;
@@ -163,4 +173,16 @@ h2 {
     justify-content: center;
     font-size: 1.5em;
 }
-/*      pie chart       */
+.procent {
+    background: rgb(255, 255, 255);
+    height: 30px;
+    width: 250px;
+}
+.indhold {
+    background: linear-gradient(90deg,  #F0A700 50%, white 50%);
+    height: 30px;
+    width: 100%;
+
+
+}
+/*      MEDIA Q      */
